# ash

./: .clangd  .gitignore  CMakeLists.txt  README.md
pseudo-spec/: data-types.md  variables.md
src/streams/: base.h  base_methods.h  char_stream.c  char_stream.h
